컨트롤러제거

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:url" content="https://grl.netlify.app" />
     <meta property="og:type" content="website" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crosscontrols=0&origin>
     <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Gamja+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Gamja+Flower&family=Jua&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -124,57 +124,57 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide shorts-video-size">
                     <div class="iframe-container">
-                        <iframe id="player11" width="560" height="315" src="https://www.youtube.com/embed/g_8kPABmwlg?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe id="player11" width="560" height="315" src="https://www.youtube.com/embed/g_8kPABmwlg?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="swiper-slide shorts-video-size">
                     <div class="iframe-container">
-                        <iframe id="player10" width="560" height="315" src="https://www.youtube.com/embed/gigxWf5YveU?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe id="player10" width="560" height="315" src="https://www.youtube.com/embed/gigxWf5YveU?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="swiper-slide shorts-video-size">
                     <div class="iframe-container">
-                        <iframe id="player9" width="560" height="315" src="https://www.youtube.com/embed/EMI106PDTdU?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe id="player9" width="560" height="315" src="https://www.youtube.com/embed/EMI106PDTdU?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="swiper-slide shorts-video-size">
                     <div class="iframe-container">
-                        <iframe id="player8" width="560" height="315" src="https://www.youtube.com/embed/NSVD5zG7Xhk?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe id="player8" width="560" height="315" src="https://www.youtube.com/embed/NSVD5zG7Xhk?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="swiper-slide shorts-video-size">
                     <div class="iframe-container">
-                        <iframe id="player7" width="560" height="315" src="https://www.youtube.com/embed/XoYq7mnJfRg?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe id="player7" width="560" height="315" src="https://www.youtube.com/embed/XoYq7mnJfRg?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="swiper-slide shorts-video-size">
                     <div class="iframe-container">
-                        <iframe id="player6" width="560" height="315" src="https://www.youtube.com/embed/AUzed14z4I8?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe id="player6" width="560" height="315" src="https://www.youtube.com/embed/AUzed14z4I8?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="swiper-slide shorts-video-size">
                     <div class="iframe-container">
-                        <iframe id="player5" width="560" height="315" src="https://www.youtube.com/embed/D7pH-C_lkxw?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe id="player5" width="560" height="315" src="https://www.youtube.com/embed/D7pH-C_lkxw?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="swiper-slide shorts-video-size">
                     <div class="iframe-container">
-                        <iframe id="player4" width="560" height="315" src="https://www.youtube.com/embed/i69GzWV4KUA?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe id="player4" width="560" height="315" src="https://www.youtube.com/embed/i69GzWV4KUA?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="swiper-slide shorts-video-size">
                     <div class="iframe-container">
-                        <iframe id="player3" width="560" height="315" src="https://www.youtube.com/embed/o95ixi5cz1g?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe id="player3" width="560" height="315" src="https://www.youtube.com/embed/o95ixi5cz1g?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="swiper-slide shorts-video-size">
                     <div class="iframe-container">
-                        <iframe id="player2" width="560" height="315" src="https://www.youtube.com/embed/f0zWOIc54Sc?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe id="player2" width="560" height="315" src="https://www.youtube.com/embed/f0zWOIc54Sc?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="swiper-slide shorts-video-size">
                     <div class="iframe-container">
-                        <iframe id="player1" width="560" height="315" src="https://www.youtube.com/embed/PTTFZymoq-c?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe id="player1" width="560" height="315" src="https://www.youtube.com/embed/PTTFZymoq-c?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <!-- 슬라이드를 더 추가하려면 위 reels-swiper-slide 블록을 복사해서 붙여넣으세요. -->
@@ -205,12 +205,12 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide hotclip-video-size">
                     <div class="iframe-container">
-                        <iframe id="hotclip-player2" width="560" height="315" src="https://www.youtube.com/embed/_YBX4bugzMA?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe id="hotclip-player2" width="560" height="315" src="https://www.youtube.com/embed/_YBX4bugzMA?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="swiper-slide hotclip-video-size">
                     <div class="iframe-container">
-                        <iframe id="hotclip-player1" width="560" height="315" src="https://www.youtube.com/embed/5c-UXzeUySo?enablejsapi=1&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe id="hotclip-player1" width="560" height="315" src="https://www.youtube.com/embed/5c-UXzeUySo?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
