파티장 수정

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <a href="#" class="mainbtn" id="watchVideoBtn">궁금하면 클릭 >></a>
                 </div>
                 <button class="party-apply-btn">
-                    <a href="https://tally.so/r/mVdZaa" class="party-apply-btn-only">파티 신청하기</a>
+                    <a href="https://tally.so/r/mVdZaa"></a>파티 신청하기
                 </button>
             </div>
         </div>
@@ -205,12 +205,12 @@
             <div class="swiper-wrapper">
                 <div class="swiper-slide hotclip-video-size">
                     <div class="iframe-container">
-                        <iframe id="hotclip-player2" width="560" height="315" src="https://www.youtube.com/embed/_YBX4bugzMA?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
+                        <iframe id="hotclip-player2" width="560" height="315" src="https://www.youtube.com/embed/5c-UXzeUySo?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
                     </div>
                 </div>
                 <div class="swiper-slide hotclip-video-size">
                     <div class="iframe-container">
-                        <iframe id="hotclip-player1" width="560" height="315" src="https://www.youtube.com/embed/5c-UXzeUySo?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
+                        <iframe id="hotclip-player1" width="560" height="315" src="https://www.youtube.com/embed/_YBX4bugzMA?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -290,8 +290,13 @@
             <div class="location-subtitle">근데 어디서?</div>
             <div class="location-title">게릴라 파티장 소개</div>
         </div>
-        <div >
-            <img class="location-image" src="/img/host.png">
+        <div>
+            <img class="location-image" src="/img/location.png">
+        </div>
+        <div class="location-info">
+            <div class="location-info-text1">홍대 클럽거리 인근</div>
+            <div class="location-info-text2">컨셉에 따라 '다양하게 분위기가 바뀌는'</div>
+            <div class="location-info-text3">매력있고 감성터지는 공간에서!</div>
         </div>
     </div>
 
