--- a/index.html
+++ b/index.html
@@ -116,17 +116,18 @@
             <div class="shorts-header">
                 <div class="shorts-subtitle">게릴라</div>
                 <div class="shorts-title">HISTORY</div>
+                <div class="hotclip-notice">'영상 사이 여백을 터치하여 슬라이드' or '영상을 클릭'하시면 <br>다른 영상을 보실 수 있어요!</div>
             </div>
         </div>
 
         <!-- 4. Swiper HTML 구조 -->
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
-                <div class="swiper-slide shorts-video-size">
+                <!-- <div class="swiper-slide shorts-video-size">
                     <div class="iframe-container">
                         <iframe id="player11" width="560" height="315" src="https://www.youtube.com/embed/g_8kPABmwlg?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
                     </div>
-                </div>
+                </div> -->
                 <div class="swiper-slide shorts-video-size">
                     <div class="iframe-container">
                         <iframe id="player10" width="560" height="315" src="https://www.youtube.com/embed/gigxWf5YveU?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
@@ -197,6 +198,7 @@
             <div class="hotclip-header">
                 <div class="hotclip-subtitle">주간 BEST</div>
                 <div class="hotclip-title"><span class="hot">핫</span>클립</div>
+                <div class="hotclip-notice">'영상 사이 여백을 터치하여 슬라이드' or '영상을 클릭'하시면 <br>다른 영상을 보실 수 있어요!</div>
             </div>
         </div>
 
