인스타버튼

--- a/index.html
+++ b/index.html
@@ -341,12 +341,14 @@
             <button class="main-btn"><a href="https://tally.so/r/mVdZaa"><span class="main-btn-text">파티 신청하기</span></a></button>
 
             <!-- 인스타 버튼 + 툴팁 -->
-            <div class="insta-btn-wrapper" a href="https://www.instagram.com/grl.party.official/" target="_blank" >
-                <div class="insta-btn">
-                    <img src="/img/insta-icon.png" alt="인스타그램" class="insta-icon">
+            <a href="https://www.instagram.com/grl.party.official/" target="_blank" class="insta-link-wrapper">
+                <div class="insta-btn-wrapper">
+                    <div class="insta-btn">
+                        <img src="/img/insta-icon.png" alt="인스타그램" class="insta-icon">
+                    </div>
+                    <div class="insta-dm">DM문의</div>
                 </div>
-                <div class="insta-dm">DM문의</div>
-            </div>
+            </a>
         </div>
     </div>
 
