아래화살표

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="party-apply-btn-wrapper">
                     <a href="https://tally.so/r/mVdZaa" class="party-apply-btn">파티 신청하기</a>
                 </div>
+                <div class="scroll-down-container">
+                    <div class="scroll-down-arrow"></div>
+                </div>
             </div>
         </div>
     </section>
