--- a/index.html
+++ b/index.html
@@ -146,11 +146,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <!-- 4. Swiper HTML 구조 -->
         <div class="swiper mySwiper">
             <div class="swiper-wrapper">
-                <!-- <div class="swiper-slide shorts-video-size">
+                <div class="swiper-slide shorts-video-size">
                     <div class="iframe-container">
-                        <iframe id="player11" width="560" height="315" src="https://www.youtube.com/embed/g_8kPABmwlg?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
+                        <iframe id="player11" width="560" height="315" src="https://www.youtube.com/embed/GTdM-QW1_Gc?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
                     </div>
-                </div> -->
+                </div>
                 <div class="swiper-slide shorts-video-size">
                     <div class="iframe-container">
                         <iframe id="player10" width="560" height="315" src="https://www.youtube.com/embed/gigxWf5YveU?enablejsapi=1&controls=0&origin=https://grl.netlify.app" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-controls=0&origin-when-cross-controls=0&origin" allowfullscreen></iframe>
