--- a/index.html
+++ b/index.html
@@ -340,9 +340,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
         </div>
         <div class="notice-section-box2">
-            <div class="notice-section-title">반말모드</div>
+            <div class="notice-section-title">다양한 컨텐츠</div>
             <div class="notice-section-text">
-                파티 시작부터 한동안은 모두 친해지기 위해<br>반말을 사용할 예정입니다!<br>나이, 직업을 공개하기 전까지는 반말로 친해져봐요!
+                파티 시작부터 모두 친해지기 위해<br>다양한 컨텐츠를 진행할 예정입니다!<br>가볍게 즐긴다는 열린 마음을 가지고 친해져봐요!
             </div>
         </div>
         <div class="notice-section-box1">
@@ -493,4 +493,3 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </script>
 </body>
 </html>
-
