--- a/index.html
+++ b/index.html
@@ -106,12 +106,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="event-section-box3">
             <div class="event-section-box3-text">즉, 이벤트 두개 모두 참여 시 <br><span class="discount">총 '만원'</span> 할인!!</div>
         </div>
-        <!-- <div class="event-section-box4">
-            <div class="event-section-title-box4">3. 재오픈기념 1+1 이벤트!!</div>
+        <div class="event-section-box4">
+            <!-- <div class="event-section-title-box4">3. 재오픈기념 1+1 이벤트!!</div>
             <div class="event-section-text-box4">
                 🗓️<span class="event-day"> 7월 19일</span> 까지만!! <br> 한명이 파티 예약하면? 동반 1인 무료 초대 이벤트!
+            </div> -->
+            <div class="event-section-text-box4">
+                <span class="event-day"> '신청을 완료하신 분'</span>에게는<br> 장소가 포함된 안내 알림톡을 보내드려요!
             </div>
-        </div> -->
+        </div>
     </section>
 
         <!-- 📦 Swiper Section -->
