--- a/index.html
+++ b/index.html
@@ -85,36 +85,37 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="event-header">
             <div class="event-header-text">
                 <div class="event-subtitle">진행중</div>
-                <div class="event-title">EVENT</div>
+                <div class="event-title">챌린지</div>
             </div>
             <div class="event-header-img">
                 <img src="/img/확성기고릴라.png">
             </div>
         </div>
-        <div class="event-section-box1">
-            <div class="event-section-title">1. 사전신청 이벤트</div>
+        <!-- <div class="event-section-box1">
+            <div class="event-section-title">게릴라 '만석 챌린지'</div>
             <div class="event-section-text">
-                파티 시작 하루 이상 미리 신청 시!<br>'메인 파티' 5천원 할인!!
+                80명 만석 파티를 열때까지!<br>특급 할인 진행합니다!
             </div>
-        </div>
+        </div> -->
         <div class="event-section-box2">
-            <div class="event-section-title">2. 동시신청 이벤트</div>
+            <div class="event-section-title">게릴라 '만석 챌린지'</div>
             <div class="event-section-text">
-                메인 파티, 애프터 파티 ‘한번에’ 신청 시<br>‘애프터 파티’ 추가 5천원 할인!!
+                80명 만석 파티를 열때까지!<br>특급 할인 진행합니다!
             </div>
+            <div class="price"><img src="/img/price.png"></div>
         </div>
-        <div class="event-section-box3">
-            <div class="event-section-box3-text">즉, 이벤트 두개 모두 참여 시 <br><span class="discount">총 '만원'</span> 할인!!</div>
-        </div>
-        <div class="event-section-box4">
-            <!-- <div class="event-section-title-box4">3. 재오픈기념 1+1 이벤트!!</div>
+        <!-- <div class="event-section-box3">
+            <div class="event-section-box3-text">남자 : <span class="discount">'30,000원'</span><br>여자 : <span class="discount">'20,000원'</span></div>
+        </div> -->
+        <!-- <div class="event-section-box4">
+            <div class="event-section-title-box4">3. 재오픈기념 1+1 이벤트!!</div>
             <div class="event-section-text-box4">
-                🗓️<span class="event-day"> 7월 19일</span> 까지만!! <br> 한명이 파티 예약하면? 동반 1인 무료 초대 이벤트!
-            </div> -->
-            <div class="event-section-text-box4">
-                <span class="event-day"> '신청을 완료하신 분'</span>에게는<br> 장소가 포함된 안내 알림톡을 보내드려요!
+                🗓️<span class="event-day"> 7월 19일</span> 까지만!! <br> 한명이 파티 예약하면? 동반 1인 무료 초대 이벤트! -->
+            <!-- </div> -->
+            <!-- <div class="event-section-text-box4">
+                <span class="event-day">'신청을 완료하신 분'</span>에게는<br> 장소가 포함된 안내 알림톡을 보내드려요!
             </div>
-        </div>
+        </div> -->
     </section>
 
         <!-- 📦 Swiper Section -->
